Fix code example errors and other items pointed out during review

--- a/app/views/docs/authentication-anonymous.phtml
+++ b/app/views/docs/authentication-anonymous.phtml
@@ -97,7 +97,7 @@ mutation {
 <h2><a href="#attach-account" id="attach-account">Attaching an Account</a></h2>
 <p>
     Anonymous users cannot sign back in. 
-    If they close their browser, or go to another computer, they won't be able to log in again.
+    If the session expires, they move to another computer, or they clear their browser data, they won't be able to log in again.
     Remember to prompt the user to create an account to not lose their data.
 </p>
 
